--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
    "name": "maratona-discover02",
    "version": "1.0.0",
    "description": "Backend Learning Project",
-   "main": "index.js",
+   "main": "src/server.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "dev": "nodemon ."
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
       "express": "^4.17.2"
+   },
+   "devDependencies": {
+      "nodemon": "^2.0.15"
    }
 }
